--- a/index.html
+++ b/index.html
@@ -32,17 +32,57 @@
       </div>
     </section>
     <!-- Skills -->
-    <section id="skills">
-      <div class="skills-container">
-        <div class="skill-card">HTML</div>
-        <div class="skill-card">CSS</div>
-        <div class="skill-card">JS & REACT</div>
-      </div>
+    <section id="skills" class="skills-container">
+      <h1>Skills</h1>
+      <p>click activated skills and move to related projects</p>
+      <div class="skill-card"><i class="fab fa-html5"></i>HTML</div>
+      <div class="skill-card"><i class="fab fa-css3"></i>CSS</div>
+      <div class="skill-card"><i class="fab fa-js"></i>JS</div>
+      <div class="skill-card"><i class="fab fa-react"></i>React</div>
     </section>
     <!-- Projects -->
-    <section id="projects"></section>
+    <section id="projects" class="projects-container">
+      <h1>Projects</h1>
+      <h3>Front=end projects</h3>
+      <!-- project 항목 선택(마크업 / 동적 웹사이트 / 리액트 웹앱 프로젝트) -->
+      <div class="project-categories">
+        <button class="category-btn" data-filter="Mark-up">
+          Mark Up Projects
+        </button>
+        <button class="category-btn" data-filter="Active-web">
+          Active Web Site Projects
+        </button>
+        <button class="category-btn" data-filter="React-web">
+          React Web App Projects
+        </button>
+      </div>
+      <!-- 항목에 따른 projects 리스트들 -->
+      <div class="project-list">
+        <!-- 추후 추가 프로젝트 타입마다 양식이 많이 다를 것 같음 -->
+      </div>
+    </section>
     <!-- Contact -->
-    <section id="contact"></section>
+    <section id="contact">
+      <h1>Contact</h1>
+      <h3>Info.</h3>
+      <div class="contact-info">
+        <img src="" alt="" class="info-left" />
+        <div class="info-right">
+          <a href="#" class="info-email">jisu129@gmail.com</a>
+          <p class="info-phone">010-6490-6210</p>
+          <p class="info-kakao">something</p>
+        </div>
+      </div>
+      <!-- 라인 추가 -->
+      <div class="contact-links">
+        <a href="" target="_blank">
+          <i class="fab fa-github-square"></i>
+        </a>
+        <a href="#" target="_blank">
+          <i class="fab fa-linkedin"></i>
+        </a>
+      </div>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
