--- a/index.html
+++ b/index.html
@@ -13,16 +13,17 @@
   </head>
   <body>
     <!-- Home(Start) -->
-    <section id="home">
+    <section id="home" class="section home">
       <h1>유지수 Yoo.JS</h1>
       <div class="line"></div>
       <h3>나는 뭐시기 뭐시기입니다.</h3>
       <div class="line"></div>
-      <button class="btn-start">start</button>
+      <button class="btn-start"></button>
     </section>
     <!-- Main -->
-    <section id="main">
-      <h2>유지수</h2>
+    <section id="main" class="section main">
+      <h1>WHO I AM</h1>
+      <h3>유지수</h3>
       <p>상세 설명 위에 거보다는 조금 더 자세하게</p>
       <button class="btn-resume">이력서 다운</button>
       <div class="preview">
@@ -32,7 +33,7 @@
       </div>
     </section>
     <!-- Skills -->
-    <section id="skills" class="skills-container">
+    <section id="skills" class="section skills-container">
       <h1>Skills</h1>
       <p>click activated skills and move to related projects</p>
       <div class="skill-card"><i class="fab fa-html5"></i>HTML</div>
@@ -41,7 +42,7 @@
       <div class="skill-card"><i class="fab fa-react"></i>React</div>
     </section>
     <!-- Projects -->
-    <section id="projects" class="projects-container">
+    <section id="projects" class="section projects-container">
       <h1>Projects</h1>
       <h3>Front=end projects</h3>
       <!-- project 항목 선택(마크업 / 동적 웹사이트 / 리액트 웹앱 프로젝트) -->
@@ -62,7 +63,7 @@
       </div>
     </section>
     <!-- Contact -->
-    <section id="contact">
+    <section id="contact" class="section contact">
       <h1>Contact</h1>
       <h3>Info.</h3>
       <div class="contact-info">
