main css structure

--- a/index.html
+++ b/index.html
@@ -23,13 +23,17 @@
     <!-- Main -->
     <section id="main" class="section main">
       <h1>WHO I AM</h1>
-      <h3>유지수</h3>
-      <p>상세 설명 위에 거보다는 조금 더 자세하게</p>
-      <button class="btn-resume">이력서 다운</button>
-      <div class="preview">
-        <div class="preview-skills">Skills</div>
-        <div class="preview-projects">Projects</div>
-        <div class="preview-contacts">Contacts</div>
+      <div class="main-container">
+        <div class="details">
+          <h3>유지수</h3>
+          <p>상세 설명 위에 거보다는 조금 더 자세하게</p>
+          <button class="btn-resume">이력서 다운</button>
+        </div>
+        <div class="preview">
+          <div class="preview-skills">Skills</div>
+          <div class="preview-projects">Projects</div>
+          <div class="preview-contacts">Contacts</div>
+        </div>
       </div>
     </section>
     <!-- Skills -->
