--- a/index.html
+++ b/index.html
@@ -37,55 +37,62 @@
       </div>
     </section>
     <!-- Skills -->
-    <section id="skills" class="section skills-container">
+    <section id="skills" class="section skills">
       <h1>Skills</h1>
       <p>click activated skills and move to related projects</p>
-      <div class="skill-card"><i class="fab fa-html5"></i>HTML</div>
-      <div class="skill-card"><i class="fab fa-css3"></i>CSS</div>
-      <div class="skill-card"><i class="fab fa-js"></i>JS</div>
-      <div class="skill-card"><i class="fab fa-react"></i>React</div>
+      <div class="skills-container">
+        <div class="skill-card"><i class="fab fa-html5"></i>HTML</div>
+        <div class="skill-card"><i class="fab fa-css3"></i>CSS</div>
+        <div class="skill-card"><i class="fab fa-js"></i>JS</div>
+        <div class="skill-card"><i class="fab fa-react"></i>React</div>
+      </div>
     </section>
     <!-- Projects -->
-    <section id="projects" class="section projects-container">
+    <section id="projects" class="section projects">
       <h1>Projects</h1>
-      <h3>Front=end projects</h3>
+      <!-- <h3>Front-end projects</h3> -->
       <!-- project 항목 선택(마크업 / 동적 웹사이트 / 리액트 웹앱 프로젝트) -->
-      <div class="project-categories">
-        <button class="category-btn" data-filter="Mark-up">
-          Mark Up Projects
-        </button>
-        <button class="category-btn" data-filter="Active-web">
-          Active Web Site Projects
-        </button>
-        <button class="category-btn" data-filter="React-web">
-          React Web App Projects
-        </button>
-      </div>
-      <!-- 항목에 따른 projects 리스트들 -->
-      <div class="project-list">
-        <!-- 추후 추가 프로젝트 타입마다 양식이 많이 다를 것 같음 -->
+      <div class="projects-container">
+        <div class="project-categories">
+          <button class="category-btn" data-filter="Mark-up">
+            Mark Up Projects
+          </button>
+          <button class="category-btn" data-filter="Active-web">
+            Active Web Site Projects
+          </button>
+          <button class="category-btn" data-filter="React-web">
+            React Web App Projects
+          </button>
+        </div>
+        <!-- 항목에 따른 projects 리스트들 -->
+        <div class="project-list">
+          <!-- 추후 추가 프로젝트 타입마다 양식이 많이 다를 것 같음 -->
+        </div>
       </div>
     </section>
     <!-- Contact -->
     <section id="contact" class="section contact">
       <h1>Contact</h1>
-      <h3>Info.</h3>
-      <div class="contact-info">
-        <img src="" alt="" class="info-left" />
-        <div class="info-right">
-          <a href="#" class="info-email">jisu129@gmail.com</a>
-          <p class="info-phone">010-6490-6210</p>
-          <p class="info-kakao">something</p>
+      <div class="contact-container">
+        <div class="contact-info">
+          <h3>Info.</h3>
+          <img src="imgs/Profile.jpg" alt="" class="info-left" />
+          <div class="info-right">
+            <a href="#" class="info-email">jisu129@gmail.com</a>
+            <p class="info-phone">010-6490-6210</p>
+            <p class="info-kakao">something</p>
+          </div>
         </div>
-      </div>
-      <!-- 라인 추가 -->
-      <div class="contact-links">
-        <a href="" target="_blank">
-          <i class="fab fa-github-square"></i>
-        </a>
-        <a href="#" target="_blank">
-          <i class="fab fa-linkedin"></i>
-        </a>
+        <!-- 라인 추가 -->
+        <div class="contact-links">
+          <a href="#" target="_blank">
+            <i class="fab fa-github-square"></i>
+          </a>
+          <a href="#" target="_blank">
+            <i class="fab fa-linkedin"></i>
+          </a>
+        </div>
+        <p class="contact__rights">2021 JISU - All rights reserved</p>
       </div>
     </section>
     <script src="script.js"></script>
