css main tab viewport mod

--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
       <h1>WHO I AM</h1>
       <div class="main-container">
         <div class="details">
-          <h3>유지수</h3>
-          <p>상세 설명 위에 거보다는 조금 더 자세하게</p>
-          <button class="btn-resume">이력서 다운</button>
+          <div class="details-wrap">
+            <h3>유지수</h3>
+            <p>상세 설명 위에 거보다는 조금 더 자세하게</p>
+            <button class="btn-resume">이력서 다운</button>
+          </div>
         </div>
         <div class="preview">
           <div class="preview-skills">Skills</div>
@@ -91,8 +93,8 @@
           <a href="#" target="_blank">
             <i class="fab fa-linkedin"></i>
           </a>
+          <p class="contact__rights">2021 JISU - All rights reserved</p>
         </div>
-        <p class="contact__rights">2021 JISU - All rights reserved</p>
       </div>
     </section>
     <script src="script.js"></script>
