--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
       <h1>Skills</h1>
       <p>click activated skills and move to related projects</p>
       <div class="skills-container">
-        <div class="skill-card"><i class="fab fa-html5"></i>HTML</div>
-        <div class="skill-card"><i class="fab fa-css3"></i>CSS</div>
-        <div class="skill-card"><i class="fab fa-js"></i>JS</div>
-        <div class="skill-card"><i class="fab fa-react"></i>React</div>
+        <div class="skill-card html"><i class="fab fa-html5"></i>HTML</div>
+        <div class="skill-card css"><i class="fab fa-css3"></i>CSS</div>
+        <div class="skill-card js"><i class="fab fa-js"></i>JS</div>
+        <div class="skill-card react"><i class="fab fa-react"></i>React</div>
       </div>
     </section>
     <!-- Projects -->
@@ -69,6 +69,25 @@
         <!-- 항목에 따른 projects 리스트들 -->
         <div class="project-list">
           <!-- 추후 추가 프로젝트 타입마다 양식이 많이 다를 것 같음 -->
+          <div class="projects-list-wrap">
+            <h4 class="project-title">디자인 시안 1 마크업</h4>
+            <div class="project-results">
+              <img src="imgs/user1.png" alt="design1" class="design-template" />
+              <i class="fas fa-arrow-right"></i>
+              <img
+                src="imgs/user1.png"
+                alt="design1-result"
+                class="design-result"
+              />
+            </div>
+          </div>
+
+          <div class="projects-list-wrap">
+            <h4 class="project-title">반응형 웹사이트 with JS</h4>
+            <div class="project-results">
+              <img src="imgs/user1.png" alt="design1" class="design-template" />
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -78,7 +97,7 @@
       <div class="contact-container">
         <div class="contact-info">
           <h3>Info.</h3>
-          <img src="imgs/Profile.jpg" alt="" class="info-left" />
+          <img src="imgs/user1.png" alt="" class="info-left" />
           <div class="info-right">
             <a href="#" class="info-email">jisu129@gmail.com</a>
             <p class="info-phone">010-6490-6210</p>
