skills card hover

--- a/index.html
+++ b/index.html
@@ -75,7 +75,11 @@
               <img src="imgs/user1.png" alt="design1" class="design-template" />
               <i class="fas fa-arrow-right"></i>
               <a href="" class="design-result" target="blank">
-                <img src="imgs/user1.png" alt="design1-result" class="" />
+                <img
+                  src="imgs/user1.png"
+                  alt="design1-result"
+                  class="design-template"
+                />
                 <div class="project-description">
                   <h3>my mobile example</h3>
                   <span>clone coding with java and android</span>
