css projects count btn hover

--- a/index.html
+++ b/index.html
@@ -57,12 +57,14 @@
       <!-- project 항목 선택(마크업 / 동적 웹사이트 / 리액트 웹앱 프로젝트) -->
       <div class="projects-container">
         <div class="project-categories">
-          <button class="category-btn selected" data-filter="*">All</button>
-          <button class="category-btn" data-filter="Mark-up">Mark Up</button>
-          <button class="category-btn" data-filter="Active-web">
+          <button class="category-btn all selected" data-filter="*">All</button>
+          <button class="category-btn mark-up" data-filter="Mark-up">
+            Mark Up
+          </button>
+          <button class="category-btn active-web" data-filter="Active-web">
             Active Web Site
           </button>
-          <button class="category-btn" data-filter="React-web">
+          <button class="category-btn react-web" data-filter="React-web">
             React Web App
           </button>
         </div>
