projects filtering done
need to add an animation for this

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
           </div>
         </div>
         <div class="preview">
-          <div class="preview-skills">Skills</div>
-          <div class="preview-projects">Projects</div>
-          <div class="preview-contacts">Contacts</div>
+          <div class="preview-skills" data-set="#skills">Skills</div>
+          <div class="preview-projects" data-set="#projects">Projects</div>
+          <div class="preview-contacts" data-set="#contact">Contacts</div>
         </div>
       </div>
     </section>
@@ -88,6 +88,22 @@
                 </div>
               </a>
             </div>
+            <div class="project-result" data-type="Mark-up">
+              <h4 class="project-title">디자인 시안 2 마크업</h4>
+              <img src="imgs/user1.png" alt="design1" class="design-template" />
+              <i class="fas fa-arrow-right"></i>
+              <a href="" class="design-result" target="blank">
+                <img
+                  src="imgs/user1.png"
+                  alt="design1-result"
+                  class="design-template"
+                />
+                <div class="project-description">
+                  <h3>my mobile example1</h3>
+                  <span>clone coding with java and android1</span>
+                </div>
+              </a>
+            </div>
             <div class="project-result" data-type="Active-web">
               <h4 class="project-title">반응형 웹사이트 with JS</h4>
               <a href="" class="design-result" target="blank">
@@ -102,7 +118,7 @@
                 </div>
               </a>
             </div>
-            <div class="project-result" data-type="Active-web">
+            <div class="project-result" data-type="React-web">
               <h4 class="project-title">React Web App</h4>
               <a href="" class="design-result" target="blank">
                 <img
