--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
   <body>
     <!-- Home(Start) -->
     <section id="home" class="section home">
-      <h1>유지수 Yoo.JS</h1>
-      <div class="line"></div>
-      <h3>나는 뭐시기 뭐시기입니다.</h3>
-      <div class="line"></div>
-      <i class="fas fa-chevron-down"></i>
+      <div class="home-wrap">
+        <h1>유지수 Yoo.JS</h1>
+        <div class="line"></div>
+        <h3>나는 뭐시기 뭐시기입니다.</h3>
+        <div class="line"></div>
+        <i class="fas fa-chevron-down"></i>
+      </div>
       <!-- <button class="btn-start"></button> -->
     </section>
     <!-- Main -->
@@ -149,18 +151,18 @@
             <p class="info-kakao">something</p>
           </div>
         </div>
-        <!-- 라인 추가 -->
-        <div class="contact-links">
-          <a href="#" target="_blank">
-            <i class="fab fa-github-square"></i>
-          </a>
-          <a href="#" target="_blank">
-            <i class="fab fa-linkedin"></i>
-          </a>
-          <p class="contact__rights">2021 JISU - All rights reserved</p>
-        </div>
       </div>
     </section>
+    <!-- 라인 추가 -->
+    <div class="contact-links">
+      <a href="#" target="_blank">
+        <i class="fab fa-github-square"></i>
+      </a>
+      <a href="#" target="_blank">
+        <i class="fab fa-linkedin"></i>
+      </a>
+      <p class="contact__rights">2021 JISU - All rights reserved</p>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
