preview skills hover

--- a/index.html
+++ b/index.html
@@ -29,39 +29,77 @@
     <!-- 그림 -->
     <!-- Main -->
     <section id="main" class="section main">
+      <div class="image-container">
+        <img
+          src="icons/pablita-313.png"
+          alt=""
+          class="bottom-image woman-pen"
+        />
+        <img src="icons/taxi-751.png" alt="" class="bottom-image hand-left" />
+        <img src="icons/taxi-752.png" alt="" class="bottom-image hand-right" />
+        <img src="icons/lime-252.png" alt="" class="bottom-image pen" />
+        <img
+          src="icons/pablita-22.png"
+          alt=""
+          class="bottom-image man-sitting"
+        />
+      </div>
       <div class="wrap">
-        <div class="image-container">
-          <img
-            src="icons/pablita-313.png"
-            alt=""
-            class="bottom-image woman-pen"
-          />
-          <img src="icons/taxi-751.png" alt="" class="bottom-image hand-left" />
-          <img
-            src="icons/taxi-752.png"
-            alt=""
-            class="bottom-image hand-right"
-          />
-          <img src="icons/lime-252.png" alt="" class="bottom-image pen" />
-          <img
-            src="icons/pablita-22.png"
-            alt=""
-            class="bottom-image man-sitting"
-          />
-        </div>
         <h1>WHO I AM</h1>
         <div class="main-container">
           <div class="details">
             <div class="details-wrap">
               <h3>유지수</h3>
-              <p>상세 설명 위에 거보다는 조금 더 자세하게</p>
+              <ul class="my-info">
+                <li><span>이름: 유지수</span></li>
+                <li><span>생년월일: 1995-02-20</span></li>
+                <li><span>나이: 만 26세</span></li>
+                <li><span>주소: 경기도 안산시 단원구 백운동(초지역)</span></li>
+                <li><span>학력: 국민대학교 전자공학부 졸업('19년)</span></li>
+                <li>
+                  <p>
+                    <span>안녕하세요 신입 프론트엔드 개발자 유지수입니다.</span>
+                    <br />
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Autem hic iusto, cum quisquam magni dolorem eum praesentium
+                    dolorum, doloremque perferendis corrupti, minima dolores
+                    soluta ad culpa non. Ex assumenda aliquam perferendis vel
+                    sapiente, quae culpa laboriosam sed? Accusamus quasi nihil
+                    deleniti temporibus error, illum fuga, vel explicabo saepe
+                    cumque sapiente!
+                  </p>
+                </li>
+              </ul>
               <button class="btn-resume">이력서 다운</button>
             </div>
           </div>
           <div class="preview">
-            <div class="preview-skills" data-set="#skills">Skills</div>
-            <div class="preview-projects" data-set="#projects">Projects</div>
-            <div class="preview-contacts" data-set="#contact">Contacts</div>
+            <div class="preview-skills" data-set="#skills">
+              <span class="this">Skills</span>
+              <div class="skillbox left">
+                <i class="fab fa-html5"> HTML</i>
+                <i class="fab fa-css3"> CSS</i>
+              </div>
+              <div class="skillbox right">
+                <div class="skillbox top">
+                  <i class="fab fa-js-square"> Javascript</i>
+                </div>
+                <div class="skillbox bot">
+                  <div class="skillbox left">
+                    <i class="fas fa-database"> MongoDB</i>
+                  </div>
+                  <div class="skillbox right">
+                    <i class="fab fa-react"> React</i>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="preview-projects" data-set="#projects">
+              <span class="this">Projects</span>
+            </div>
+            <div class="preview-contacts" data-set="#contact">
+              <span class="this">Contacts</span>
+            </div>
           </div>
         </div>
       </div>
