preview projects hover

--- a/index.html
+++ b/index.html
@@ -96,6 +96,33 @@
             </div>
             <div class="preview-projects" data-set="#projects">
               <span class="this">Projects</span>
+              <!-- day18 day35 참고 -->
+              <div class="image-container">
+                <div class="each-image first">
+                  <strong>MarkUp</strong>
+                  <img src="imgs/markup1.jpg" alt="markup1" />
+                </div>
+                <div class="each-image">
+                  <strong>MarkUp</strong>
+                  <img src="imgs/markup2.jpg" alt="markup2" />
+                </div>
+                <div class="each-image">
+                  <strong>JS Project</strong>
+                  <img src="imgs/webproject1.PNG" alt="webproject1" />
+                </div>
+                <div class="each-image">
+                  <strong>React</strong>
+                  <img src="imgs/webproject1.PNG" alt="reactproject1" />
+                </div>
+              </div>
+              <div class="buttons-container">
+                <button id="left" class="btn">
+                  <i class="fas fa-caret-left"></i>
+                </button>
+                <button id="right" class="btn">
+                  <i class="fas fa-caret-right"></i>
+                </button>
+              </div>
             </div>
             <div class="preview-contacts" data-set="#contact">
               <span class="this">Contacts</span>
