contact card add
need to add an animation

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       src="https://kit.fontawesome.com/28653e43c1.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -126,6 +127,20 @@
             </div>
             <div class="preview-contacts" data-set="#contact">
               <span class="this">Contacts</span>
+              <div class="icons">
+                <i class="fas fa-mobile-alt icon"></i>
+                <i class="far fa-envelope icon"></i>
+                <span
+                  class="iconify icon"
+                  data-icon="vs-kakaotalk"
+                  data-inline="false"
+                ></span>
+              </div>
+              <div class="contents">
+                <span>010-6490-6210</span>
+                <span>jisu129@gmail.com</span>
+                <span>JISUY</span>
+              </div>
             </div>
           </div>
         </div>
@@ -167,16 +182,15 @@
           </div>
           <!-- 항목에 따른 projects 리스트들 -->
           <div class="project-list">
-            <!-- 추후 추가 프로젝트 타입마다 양식이 많이 다를 것 같음 -->
             <div class="projects-list-wrap">
               <div class="project-result" data-type="Mark-up">
                 <h4 class="project-title">디자인 시안 1 마크업</h4>
-                <img
+                <!-- <img
                   src="imgs/user1.png"
                   alt="design1"
                   class="design-template"
                 />
-                <i class="fas fa-arrow-right"></i>
+                <i class="fas fa-arrow-right"></i> -->
                 <a href="" class="design-result" target="blank">
                   <img
                     src="imgs/user1.png"
@@ -191,12 +205,12 @@
               </div>
               <div class="project-result" data-type="Mark-up">
                 <h4 class="project-title">디자인 시안 2 마크업</h4>
-                <img
+                <!-- <img
                   src="imgs/user1.png"
                   alt="design1"
                   class="design-template"
                 />
-                <i class="fas fa-arrow-right"></i>
+                <i class="fas fa-arrow-right"></i> -->
                 <a href="" class="design-result" target="blank">
                   <img
                     src="imgs/user1.png"
@@ -248,13 +262,16 @@
         <h1>Contact</h1>
         <div class="contact-container">
           <div class="contact-info">
-            <h3>Info.</h3>
-            <img src="imgs/user1.png" alt="" class="info-left" />
-            <div class="info-right">
-              <a href="#" class="info-email">jisu129@gmail.com</a>
-              <p class="info-phone">010-6490-6210</p>
-              <p class="info-kakao">something</p>
+            <div class="info-wrap">
+              <h3>Info.</h3>
+              <img src="imgs/user1.png" alt="" class="info-left" />
+              <div class="info-right">
+                <a href="#" class="info-email">jisu129@gmail.com</a>
+                <p class="info-phone">010-6490-6210</p>
+                <p class="info-kakao">something</p>
+              </div>
             </div>
+            <img src="icons/conifer-611.png" alt="card" class="card-image" />
           </div>
         </div>
       </div>
