--- a/index.html
+++ b/index.html
@@ -23,27 +23,24 @@
           프론트엔드 신입 개발자 유지수입니다.
         </h3>
         <div class="line"></div>
-        <i class="fas fa-chevron-down"></i>
       </div>
       <!-- <button class="btn-start"></button> -->
     </section>
     <!-- 그림 -->
     <!-- Main -->
     <section id="main" class="section main">
-      <div class="image-container">
+      <div class="home-bottom-container">
         <img
-          src="icons/pablita-313.png"
+          src="icons/cherry-white-cloud.png"
           alt=""
-          class="bottom-image woman-pen"
+          class="bottom-image image-left"
         />
-        <img src="icons/taxi-751.png" alt="" class="bottom-image hand-left" />
-        <img src="icons/taxi-752.png" alt="" class="bottom-image hand-right" />
-        <img src="icons/lime-252.png" alt="" class="bottom-image pen" />
         <img
-          src="icons/pablita-22.png"
+          src="icons/cherry-white-cloud-1.png"
           alt=""
-          class="bottom-image man-sitting"
+          class="bottom-image image-right"
         />
+        <i class="fas fa-chevron-down"></i>
       </div>
       <div class="wrap">
         <h1>WHO I AM</h1>
@@ -264,24 +261,44 @@
           <div class="contact-info">
             <div class="info-wrap">
               <h3>Info.</h3>
-              <img src="imgs/user1.png" alt="" class="info-left" />
-              <div class="info-right">
-                <a href="#" class="info-email">jisu129@gmail.com</a>
-                <p class="info-phone">010-6490-6210</p>
-                <p class="info-kakao">something</p>
+              <div class="info email">
+                <i class="far fa-envelope icon"></i>
+                <a href="#">jisu129@gmail.com</a>
+              </div>
+              <div class="info mobile">
+                <i class="fas fa-mobile-alt icon"></i>
+                <p>010-6490-6210</p>
+              </div>
+              <div class="info kktalk">
+                <span
+                  class="iconify icon"
+                  data-icon="vs-kakaotalk"
+                  data-inline="false"
+                ></span>
+                <p>something</p>
               </div>
             </div>
-            <img src="icons/conifer-611.png" alt="card" class="card-image" />
           </div>
         </div>
       </div>
     </section>
     <!-- 라인 추가 -->
     <div class="contact-links">
-      <a href="#" target="_blank">
+      <div class="contact-image-container">
+        <img src="icons/bermuda-252.png" alt="house" class="house1" />
+        <img src="icons/pablo-smart-house.png" alt="house" class="house2" />
+        <img
+          src="icons/bermuda-veterinary-clinic.png"
+          alt="house"
+          class="house3"
+        />
+        <img src="icons/arabica-1087.png" alt="house" class="house4" />
+        <img src="icons/hugo-171.png" alt="card" class="building" />
+      </div>
+      <a href="#" target="blank">
         <i class="fab fa-github-square"></i>
       </a>
-      <a href="#" target="_blank">
+      <a href="#" target="blank">
         <i class="fab fa-linkedin"></i>
       </a>
       <p class="contact__rights">2021 JISU - All rights reserved</p>
