--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <i class="fas fa-chevron-down"></i>
       </div>
       <div class="wrap">
-        <h1>WHO I AM</h1>
+        <h1>RESUME</h1>
         <div class="main-container">
           <div class="details">
             <div class="details-wrap">
@@ -292,7 +292,7 @@
           alt="house"
           class="house3"
         />
-        <img src="icons/arabica-1087.png" alt="house" class="house4" />
+        <!-- <img src="icons/arabica-1087.png" alt="house" class="house4" /> -->
         <img src="icons/hugo-171.png" alt="card" class="building" />
       </div>
       <a href="#" target="blank">
@@ -305,7 +305,9 @@
     </div>
     <!-- Arrow up -->
     <button class="arrow-up">
-      <i class="fas fa-arrow-up"></i>
+      <!-- <i class="fas fa-arrow-up"></i> -->
+      <img src="icons/clip-638.png" alt="" />
+      <img src="icons/bermuda-372.png" alt="" class="flame" />
     </button>
     <script src="script.js"></script>
   </body>
