section background gradient and preview projects done

--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
   <body>
     <!-- Home(Start) -->
     <section id="home" class="section home">
+      <div class="home-image-container">
+        <img src="icons/bermuda-414.png" alt="" class="cloud1" />
+        <img src="icons/bermuda-415.png" alt="" class="cloud2" />
+        <img src="icons/bermuda-419.png" alt="" class="cloud3" />
+        <img src="icons/bermuda-423.png" alt="" class="cloud4" />
+        <img src="icons/bermuda-424.png" alt="" class="cloud5" />
+        <img src="icons/bermuda-425.png" alt="" class="cloud6" />
+        <img src="icons/pluto-145.png" alt="" class="cloud7" />
+        <img src="icons/pluto-148.png" alt="" class="cloud8" />
+      </div>
       <div class="home-wrap">
         <h1>유지수 Yoo.JS</h1>
         <div class="line"></div>
@@ -96,7 +106,7 @@
               <span class="this">Projects</span>
               <!-- day18 day35 참고 -->
               <div class="image-container">
-                <div class="each-image first">
+                <div class="each-image">
                   <strong>MarkUp</strong>
                   <img src="imgs/markup1.jpg" alt="markup1" />
                 </div>
