media query: resume part

--- a/index.html
+++ b/index.html
@@ -57,27 +57,27 @@
         <div class="main-container">
           <div class="details">
             <div class="details-wrap">
-              <h3>유지수</h3>
+              <img src="imgs/user1.png" alt="" />
               <ul class="my-info">
                 <li><span>이름: 유지수</span></li>
                 <li><span>생년월일: 1995-02-20</span></li>
                 <li><span>나이: 만 26세</span></li>
                 <li><span>주소: 경기도 안산시 단원구 백운동(초지역)</span></li>
                 <li><span>학력: 국민대학교 전자공학부 졸업('19년)</span></li>
-                <li>
-                  <p>
-                    <span>안녕하세요 신입 프론트엔드 개발자 유지수입니다.</span>
-                    <br />
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Autem hic iusto, cum quisquam magni dolorem eum praesentium
-                    dolorum, doloremque perferendis corrupti, minima dolores
-                    soluta ad culpa non. Ex assumenda aliquam perferendis vel
-                    sapiente, quae culpa laboriosam sed? Accusamus quasi nihil
-                    deleniti temporibus error, illum fuga, vel explicabo saepe
-                    cumque sapiente!
-                  </p>
-                </li>
               </ul>
+            </div>
+            <div class="details-description-wrap">
+              <p class="my-description">
+                <span>안녕하세요 신입 프론트엔드 개발자 유지수입니다.</span>
+                <br />
+                <br />
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
+                hic iusto, cum quisquam magni dolorem eum praesentium dolorum,
+                doloremque perferendis corrupti, minima dolores soluta ad culpa
+                non. Ex assumenda aliquam perferendis vel sapiente, quae culpa
+                laboriosam sed? Accusamus quasi nihil deleniti temporibus error,
+                illum fuga, vel explicabo saepe cumque sapiente!
+              </p>
               <button class="btn-resume">이력서 다운</button>
             </div>
           </div>
@@ -285,7 +285,7 @@
                   data-icon="vs-kakaotalk"
                   data-inline="false"
                 ></span>
-                <p>something</p>
+                <p>JISUY</p>
               </div>
             </div>
           </div>
