--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
         <img src="icons/pluto-148.png" alt="" class="cloud8" />
       </div>
       <div class="home-wrap">
-        <h1>유지수 Yoo.JS</h1>
+        <h1>유지수 YOO JISU</h1>
         <div class="line"></div>
         <h3>
-          안녕하세요. <br />
+          안녕하세요.
+          <br />
+          <br />
           프론트엔드 신입 개발자 유지수입니다.
         </h3>
         <div class="line"></div>
@@ -50,7 +52,8 @@
           alt=""
           class="bottom-image image-right"
         />
-        <i class="fas fa-chevron-down"></i>
+        <img src="icons/conifer-172.png" alt="" class="dots" />
+        <img src="icons/abstract-709.png" alt="" class="down" />
       </div>
       <div class="wrap">
         <h1>RESUME</h1>
@@ -155,6 +158,7 @@
     </section>
     <!-- Skills -->
     <section id="skills" class="section skills">
+      <img src="icons/pale-659.png" alt="" class="airplane" />
       <div class="wrap">
         <h1>Skills</h1>
         <p>click activated skills and move to related projects</p>
