--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
           class="bottom-image image-right"
         />
         <img src="icons/conifer-172.png" alt="" class="dots" />
+        <img src="icons/spot-dot.png" alt="" class="dot" />
+        <img src="icons/spot-dot.png" alt="" class="dot dot2" />
         <img src="icons/abstract-709.png" alt="" class="down" />
       </div>
       <div class="wrap">
@@ -158,7 +160,7 @@
     </section>
     <!-- Skills -->
     <section id="skills" class="section skills">
-      <img src="icons/pale-659.png" alt="" class="airplane" />
+      <!-- <img src="icons/pale-659.png" alt="" class="airplane" /> -->
       <div class="wrap">
         <h1>Skills</h1>
         <p>click activated skills and move to related projects</p>
