--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <img src="icons/pluto-148.png" alt="" class="cloud8" />
       </div>
       <div class="home-wrap">
-        <h1>유지수 YOO JISU</h1>
+        <h1>YOO JISU</h1>
         <div class="line"></div>
         <h3>
           안녕하세요.
@@ -64,11 +64,16 @@
             <div class="details-wrap">
               <img src="imgs/user1.png" alt="" />
               <ul class="my-info">
-                <li><span>이름: 유지수</span></li>
+                <li><span>이름: ㅇㅇㅇ</span></li>
+                <li><span>생년월일: 0000-00-00</span></li>
+                <li><span>나이: 만 00세</span></li>
+                <li><span>주소: ㅇㅇㅇ ㅇㅇㅇ ㅇㅇㅇ ㅇㅇㅇ</span></li>
+                <li><span>학력: ㅇㅇㅇㅇㅇ ㅇㅇㅇㅇㅇ ㅇㅇ</span></li>
+                <!-- <li><span>이름: 유지수</span></li>
                 <li><span>생년월일: 1995-02-20</span></li>
                 <li><span>나이: 만 26세</span></li>
                 <li><span>주소: 경기도 안산시 단원구 백운동(초지역)</span></li>
-                <li><span>학력: 국민대학교 전자공학부 졸업('19년)</span></li>
+                <li><span>학력: 국민대학교 전자공학부 졸업('19년)</span></li> -->
               </ul>
             </div>
             <div class="details-description-wrap">
