modifying background wrap and add some links to a tags

--- a/index.html
+++ b/index.html
@@ -304,26 +304,27 @@
       </div>
     </section>
     <!-- 라인 추가 -->
-    <div class="contact-links">
-      <div class="contact-image-container">
-        <img src="icons/bermuda-252.png" alt="house" class="house1" />
-        <img src="icons/pablo-smart-house.png" alt="house" class="house2" />
-        <img
-          src="icons/bermuda-veterinary-clinic.png"
-          alt="house"
-          class="house3"
-        />
-        <!-- <img src="icons/arabica-1087.png" alt="house" class="house4" /> -->
-        <img src="icons/hugo-171.png" alt="card" class="building" />
+    <section class="section contact-links">
+      <div class="wrap">
+        <div class="contact-image-container">
+          <img src="icons/bermuda-252.png" alt="house" class="house1" />
+          <img src="icons/pablo-smart-house.png" alt="house" class="house2" />
+          <img
+            src="icons/bermuda-veterinary-clinic.png"
+            alt="house"
+            class="house3"
+          />
+          <img src="icons/hugo-171.png" alt="card" class="building" />
+        </div>
+        <a href="https://github.com/JISU-Y" target="blank">
+          <i class="fab fa-github-square"></i>
+        </a>
+        <a href="https://www.rocketpunch.com/@jisu129" target="blank">
+          <i class="fab fa-linkedin"></i>
+        </a>
+        <p class="contact__rights">2021 JISU - All rights reserved</p>
       </div>
-      <a href="#" target="blank">
-        <i class="fab fa-github-square"></i>
-      </a>
-      <a href="#" target="blank">
-        <i class="fab fa-linkedin"></i>
-      </a>
-      <p class="contact__rights">2021 JISU - All rights reserved</p>
-    </div>
+    </section>
     <!-- Arrow up -->
     <button class="arrow-up">
       <!-- <i class="fas fa-arrow-up"></i> -->
